--- a/apps/front/src/styles.scss
+++ b/apps/front/src/styles.scss
@@ -1,4 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
 @tailwind components;
 @tailwind base;
 @tailwind utilities;
-/* You can add global styles to this file, and also import other style files */
+
